# cinema-platform

./: .env.example  .gitignore  .prettierignore  Makefile  README.md  package.json  turbo.json
.github/workflows/: ci.yml
apps/admin/: next.config.ts  package.json
apps/admin/src/app/: layout.tsx  page.tsx
apps/admin/src/components/: providers.tsx
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: dependencies.py  router.py
apps/api/app/api/routes/: auth.py  health.py
apps/api/app/core/: config.py  database.py  email.py  exceptions.py  logging.py  middleware.py  redis.py  security.py  sessions.py  storage.py
apps/api/app/shared/: models.py  schemas.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260712_0001_create_users.py
apps/api/tests/: test_account_updates.py  test_auth_security.py  test_health.py
apps/web/: eslint.config.js  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/sign-in/: page.tsx
apps/web/src/app/sign-up/: page.tsx
apps/web/src/components/: account-panel.tsx  coming-soon-section.tsx  health-status.test.tsx  health-status.tsx  hero-carousel.tsx  movie-card.tsx  movie-grid.tsx  screening-schedule.tsx  sign-in-form.tsx  sign-up-form.tsx  site-header.tsx  trailer-hero.tsx
apps/web/src/data/: movies.ts  purchase.ts
apps/web/src/hooks/: use-auth.ts
apps/web/src/lib/: auth-schemas.ts
infra/: compose.yml
scripts/: export-openapi.py  generate-api.mjs
(+3 files in other folders)
