[project]
name = "cimena-api"
version = "0.1.0"
description = "Generic FastAPI backend foundation"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "redis>=5.2.1",
  "sqlalchemy[asyncio]>=2.0.37",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "ruff>=0.9.2"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
